[project]
name = "shieldx"
version = "0.0.1-alpha.0"
description = ""
authors = [
    {name = "Ignacio Castillo",email = "ignacio.bcastillo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "mictlanx (==0.0.161a3)",
    "motor (>=3.7.0,<4.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "aio-pika (>=9.5.5,<10.0.0)",
    "httpx (>=0.28.0)",
    "httpcore (>=1.0.7)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
coverage = "^7.10.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

